# RockPhysX

./: .gitignore  LICENSE  README.md  Tver_ver1.xlsx  glbls.mod  gsa_wrapper_mod.mod  pyproject.toml  requirements.txt
bayes_gsa_output/: idata_posterior.npz  posterior_summary.csv
examples/: 01_tc_sensitivity_porosity_saturation_shape.py  02_tc_sensitivity_aspect_ratio.py  03_tc_inverse_identifiability.py  04_tc_anisotropy_orientation_surface.py  05_test_all_thermal_models.py  07_timan_pechora_sensitivity_analysis.py  08_timan_pechora_sensitivity_atlas.py  11_bayesian_timan_pechora.py  basic_workflow.py  bayes_gsa_aspect_ratio_single_sample.py  bazhenov_fifthlook_splitom (1).py  bazhenov_fifthlook_splitom (2).py  compare_level1_emt_timan_pechora.py  comparison_basic_vs_dual_sandstone.py  comparison_basic_vs_dual_sandstone_five_plots.py  forward_anisotropic_results_fixed (1).xlsx  ic_vs_intergranular_delta_lambda_map.py  plot_tc_mixed_fluids_gsa.py  plot_tc_mixed_fluids_gsa_temperature.py  plot_tc_mixed_fluids_gsa_temperature_atlases.py  plot_tc_mixed_fluids_gsa_temperature_rel20.py  run_one_model.py  saurashtra_sensitivity_analysis.py  test_gsa_run.py  thermal_conductivity_plots.py  timana_models.ipynb
test_new/: LA_test.py  bayes_m1_tc_vp_vs_collection.py  bayes_m1_tc_vp_vs_collection_results.xlsx  bayes_m1_tc_vp_vs_collection_summary.md  beta_dist.py  data_restructured_for_MT_v2.xlsx  hs_bounds_resistivity_porosity_before_after.py  hs_bounds_tc_vp_vs_R_porosity_before_after.py  hs_bounds_tc_vp_vs_porosity.py  hs_bounds_tc_vp_vs_porosity_before_after  mt_tc_m1_m2.py  (+16 more)
(+294 files in other folders)
